# catcut

./: .gitignore  README.md  patch_page.py  start_tmux.sh
catcut-backend/: .gitignore  main.py  pyproject.toml
catcut-backend/app/: __init__.py  ass_builder.py  core.py  main.py
catcut-frontend/: package-lock.json  package.json
catcut-frontend/app/: globals.css  layout.tsx  page.tsx
catcut-frontend/src-tauri/: Cargo.toml  tauri.conf.json
catcut-frontend/src-tauri/capabilities/: default.json
catcut-frontend/src-tauri/src/: lib.rs
