[project]
name = "catcut"
version = "0.1.0"
description = "AI-powered CapCut-style subtitle generator with word-level timing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.23.0.39",
    "psutil>=7.2.2",
    "pysubs2>=1.8.1",
    "python-multipart>=0.0.32",
    "stable-ts>=2.19.1",
    "uvicorn>=0.49.0",
]
